.archive/self-hosted/netbox/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.vzkn.eu/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
spec:
  hostnames:
    - "netbox.vzkn.eu"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: netbox
          namespace: network
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
